@@ -79,17 +79,6 @@
           </tr>
           
           <tr>
-            <td>Base compiler command line switches on the selected
-            compiler, not the current JDK</td>
-            <td>If you set compiler to javac1.1, massage your
-            classpath correctly and set include*runtime to false you
-            can invoke jdk 1.1's javac even though you are running on
-            a 1.3 VM.  Current Ant will use -sourcepath which the
-            compiler cannot understand in this sitation.</td>
-            <td>Stefan, others welcome</td>
-          </tr>
-
-          <tr>
             <td>Make javadoc a real directory based task</td>
             <td></td>
             <td>Stefan, others welcome</td>
@@ -142,7 +131,12 @@
               some cases yet (same reason as bug PR 7980)</td>
             <td>Stefan</td>
           </tr>
-
+          <tr>
+            <td>Base compiler command line switches on the selected
+            compiler, not the current JDK</td>
+            <td></td>
+            <td>Stefan</td>
+          </tr>
         </table>
       </subsection>
 
